--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Roboto+Slab:wght@200;400;600;900&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>My Portfoilo</title>
 </head>
 <body>
@@ -31,9 +33,9 @@ href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;70
         </div>
     </nav>
     <section id="hero" class="d-flex justify-content-center align-items-center">
-    <div class="text-center" style="background-image: url('portfolio.jpg'); height: 250px; width:1000px; background-repeat: no-repeat; background-size: cover;">
+    <div class="text-center" style="background-image: url('portfolio.jpg'); height: 250px; width: 1500px; background-repeat: no-repeat; background-size: cover;">
         <h1 style="color: rgb(0, 3, 6);">Hello, I am Triumph Akinyele</h1>
-        <p style="color: blue;">Web Developer and Designer | Graphic Designer | Coder</p>
+        <p style="color: black;">Web Developer and Designer | Graphic Designer | Coder</p>
         <a href="#projects" class="btn btn-primary">View My Work</a>
     </div>
     </section>
@@ -41,7 +43,7 @@ href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;70
     <section id="about">
         <div class="intro">
             <h2>About Me</h2>
-            <p style="font-size: xx-large; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+            <p style="font-size: x-large; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
                 Welcome to my portfolio! Her, you will find a collection of all my work that showcases my skills, creativity, and dedication.
                 Each project reflects my passion for <b>web development</b>, with a focus on delivering quality and innovation. You are invited to to explore my work and see how my expertise can bring value to your next project.
             </p>
@@ -50,35 +52,76 @@ href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;70
 
     <section id="projects">
         <h2>Projects</h2>
-        <p class="Projects"></p>
-        <div class="project-cards">
-            <div class="project-card">
-                <h3>HTML Project</h3>
-            <img src="html image.png" alt="html project"/>
-            <p>HTML Frontend Project</p>
-            <a href="#" class="btn btn-success">See Project</a>
+            <p class="Projects"></p>
+            <div class="project-cards">
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="project-card">
+                        <h3>HTML Project</h3>
+                        <img src="html image.png" alt="html project"/>
+                        <p><b>HTML Frontend Project</b></p>
+                        <a href="https://github.com/Jekyll-007" target="_blank" class="btn btn-primary">See Project</a>
+                    </div>
+                </div><br>
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="project-card">
+                        <h3>CSS Projects</h3>
+                        <img src="css image.png" alt="css project"/>
+                        <p><b>CSS Frontend Project</b></p>
+                        <a href="https://github.com/Jekyll-007" target="_blank" class="btn btn-primary">See Project</a>
+                    </div>
+                </div><br>
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="project-card">
+                        <h3>Bootstrap Projects</h3>
+                        <img src="bootstrap image.png" alt="bootstrap project"/>
+                        <p><b>Bootstrap Frontend Project</b></p>
+                        <a href="https://github.com/Jekyll-007" target="_blank" class="btn btn-primary">See Project</a>
+                    </div>
+                </div><br>
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="project-card">
+                        <h3>Javascript Projects</h3>
+                        <img src="js image.png" alt="js project"/>
+                        <p><b>JS Frontend Project</b></p>
+                        <a href="https://github.com/Jekyll-007" target="_blank" class="btn btn-primary">See Project</a>
+                    </div>
+                </div><br>
             </div>
-            <div class="project-card">
-                <h3>HTML Project</h3>
-            <img src="html image.png" alt="html project"/>
-            <p>HTML Frontend Project</p>
-            <a href="#" class="btn btn-success">See Project</a>
-            </div>
-            <div class="project-card">
-                <h3>HTML Project</h3>
-            <img src="html image.png" alt="html project"/>
-            <p>HTML Frontend Project</p>
-            <a href="#" class="btn btn-success">See Project</a>
-            </div>
-            <div class="project-card">
-                <h3>HTML Project</h3>
-            <img src="html image.png" alt="html project"/>
-            <p>HTML Frontend Project</p>
-            <a href="#" class="btn btn-success">See Project</a>
-            </div>
-        </div>
     </section>
 
-  
+    <section>
+        <section id="contact" class="dropdown-content">
+            <div class="container">
+                <h2>Contact Me</h2>
+                <p>If you have any questions</p>
+                <form action="submit-form.php" method="POST" class="contact-form">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" id="name" class="form-control" placeholder="Enter your Name" required>
+                        <div class="form-group">
+                            <label for="email">Your Name</label>
+                            <input type="email" id="email" class="form-control" placeholder="Enter your email address" required>
+                            <div class="form-group">
+                                <label for="message">Your Name</label>
+                                <textarea id="message" name="message" rows="5" class="form-control" placeholder="Write your message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
+            </div>
+        </section>
+    </section>
+
+<footer class="footer bg-dark text-light text-center">
+    <div class="container">
+        <p>&copy; 2024 Triumph Akinyele, All Rights Reserved.</p>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i> </a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>          
+        </div>
+    </div>
+</footer>
+  <script src="script.js"></script>
 </body>
 </html>
